cmake_minimum_required(VERSION 2.8.9 FATAL_ERROR)

project(cxx11-cmake-modules)

set(CXX11CM_MAJOR_VERSION 0)
set(CXX11CM_MINOR_VERSION 0)
set(CXX11CM_PATCH_VERSION 1)

set(CXX11CM_VERSION ${CXX11CM_MAJOR_VERSION}.${CXX11CM_MINOR_VERSION}.${CXX11CM_PATCH_VERSION})

set(SHARE_INSTALL_DIR        share/CXX11CM-${CXX11CM_VERSION})
set(MODULES_INSTALL_DIR      ${SHARE_INSTALL_DIR}/modules/)
set(KDE_MODULES_INSTALL_DIR  ${SHARE_INSTALL_DIR}/kde-modules/)
set(FIND_MODULES_INSTALL_DIR ${SHARE_INSTALL_DIR}/find-modules/)
set(CMAKECONFIG_INSTALL_DIR  ${SHARE_INSTALL_DIR}/cmake/)
set(DOC_INSTALL_DIR          ${SHARE_INSTALL_DIR}/doc/)

file(GLOB installModuleFiles ${CMAKE_SOURCE_DIR}/modules/*[^~])
install(FILES ${installModuleFiles} DESTINATION ${MODULES_INSTALL_DIR})

include(CMakePackageConfigHelpers)

configure_package_config_file(CXX11CMConfig.cmake.in ${CMAKE_CURRENT_BINARY_DIR}/CXX11CMConfig.cmake
    INSTALL_DESTINATION  ${CMAKECONFIG_INSTALL_DIR}
    PATH_VARS  FIND_MODULES_INSTALL_DIR KDE_MODULES_INSTALL_DIR MODULES_INSTALL_DIR )


write_basic_package_version_file( ${CMAKE_CURRENT_BINARY_DIR}/CXX11CMConfigVersion.cmake
    VERSION ${CXX11CM_MAJOR_VERSION}.${CXX11CM_MINOR_VERSION}.${CXX11CM_PATCH_VERSION}
    COMPATIBILITY AnyNewerVersion )

install(FILES ${CMAKE_CURRENT_BINARY_DIR}/CXX11CMConfig.cmake
    ${CMAKE_CURRENT_BINARY_DIR}/CXX11CMConfigVersion.cmake
    DESTINATION ${CMAKECONFIG_INSTALL_DIR})

# set up packaging
set(CPACK_PACKAGE_NAME cxx11-cmake-modules)
set(CPACK_PACKAGE_VERSION ${CXX11CM_VERSION})
set(CPACK_SYSTEM_NAME "generic")
set(CPACK_GENERATOR "TGZ")
set(CPACK_SET_DESTDIR FALSE)

include(CPack)
